--- a/main.yml
+++ b/main.yml
@@ -80,7 +80,7 @@
         - start tomcat
   handlers:
     - name: start tomcat
-      ansible.builtin.systemd_service:
+      ansible.builtin.systemd:
         name: tomcat
         daemon_reload: yes
         enabled: yes
